# jogging-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.override.yml  docker-compose.yml  manage.py  mypy.ini  openapi-schema.json  openapi-schema.yml  pyproject.toml  pytest.ini  requirements.txt
advanced_filters/: apps.py  filters.py
api/: admin.py  external_sources.py  filter_backends.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20200429_2137.py  0003_user_role.py  0004_auto_20200501_2158.py  0005_split_datetime_part1.py  0005_split_datetime_part2.py  0006_activity_duration.py
jogging_tracker/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_jogging_tracker.py
tests/advanced_filters/: test_filters.py
tests/api/: test_activities.py  test_auth.py  test_external_sources.py  test_reports.py  test_users.py  test_weather.py
tests_integration/: .gitlab-ci.yml  test_all.py
