[tool.poetry]
name = "jogging_tracker"
version = "0.1.0"
description = "REST API that tracks jogging times of users"
authors = ["Tiago Carreira <tiago.g.carreira+git@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.14"
gunicorn = "^20.0.4"
djangorestframework = "^3.11.2"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"
pyowm = "^2.10.0"
whitenoise = "^5.0.1"
pyyaml = "^5.4"
uritemplate = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
black = "^19.10b0"
pylint-django = "^2.0.15"
django-discover-runner = "^1.0"
coverage = "^5.1"
pytest-django = "^3.9.0"
rope = "^0.16.0"
mypy = "^0.770"
django-stubs = "^1.5.0"
djangorestframework-stubs = "^1.1.0"
uritemplate = "^3.0.1"
pyyaml = "^5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
